added more tests